manager assigning fixed
