# swagger-output.json
@@ -104,6 +104,9 @@
                 },
                 "role": {
                   "example": "any"
+                },
+                "createdBy": {
+                  "example": "any"
                 }
               }
             }
@@ -205,9 +208,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
